move, color change, points

--- a/index.html
+++ b/index.html
@@ -90,8 +90,12 @@
             <th></th>
         </tr>
     </table>
-
-
+    <div id="points">
+        <div class = "black_player" style="float: left; color:black;">●</div>
+        <div  id = "black_points" style="float: left; color:black;"">0</div>   
+        <div id = "white_points" style="float: right; color:black;">0</div>
+        <div class = "white_player" style="float: right; color:black;">○</div>
+    </div>
 <script src = js/script.js></script>        
 </body>
 </html>
