scoring, determining the winner, displaying the turn

--- a/index.html
+++ b/index.html
@@ -91,11 +91,12 @@
         </tr>
     </table>
     <div id="points">
-        <div class = "black_player" style="float: left; color:black;">●</div>
-        <div  id = "black_points" style="float: left; color:black;"">0</div>   
-        <div id = "white_points" style="float: right; color:black;">0</div>
-        <div class = "white_player" style="float: right; color:black;">○</div>
+        <div class = "player" id = "turn" style="float: left; color:black;">●</div>
+        <div  id = "black_points" style="float: left; color:black;"">2</div>   
+        <div id = "white_points" style="float: right; color:black;">2</div>
+        <div class = "player" id = "turn" style="float: right; color:black;">○</div>    
     </div>
+    <div id = "win"></div>
 <script src = js/script.js></script>        
 </body>
 </html>
