--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
         </tr>
     </table>
     <div id="points">
-        <div class = "player" id = "turn" style="float: left; color:black;">●</div>
-        <div  id = "black_points" style="float: left; color:black;"">2</div>   
+        <div id = "turn" style="float: left; color:black;">●</div>
+        <div id = "black_points" style="float: left; color:black;"">2</div>   
         <div id = "white_points" style="float: right; color:black;">2</div>
-        <div class = "player" id = "turn" style="float: right; color:black;">○</div>    
+        <div id = "turn" style="float: right; color:black;">○</div>    
     </div>
     <div id = "win"></div>
 <script src = js/script.js></script>        
