made the code clearer, removed the transient array

--- a/index.html
+++ b/index.html
@@ -8,86 +8,86 @@
     <title>Rosero</title>
 </head>
 <body>
-    <table id = board class = "boardCells">
+    <table id="board" class="boardCells">
         <tr>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
+            <th id="0" data-x="0" data-y = "0"></th>
+            <th id="1" data-x="0" data-y = "1"></th>
+            <th id="2" data-x="0" data-y = "2"></th>
+            <th id="3" data-x="0" data-y = "3"></th>
+            <th id="4" data-x="0" data-y = "4"></th>
+            <th id="5" data-x="0" data-y = "5"></th>
+            <th id="6" data-x="0" data-y = "6"></th>
+            <th id="7" data-x="0" data-y = "7"></th>
         </tr>
         <tr>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
+            <th id="8" data-x = "1" data-y = "0"></th>
+            <th id="9" data-x = "1" data-y = "1"></th>
+            <th id="10" data-x = "1" data-y = "2"></th>
+            <th id="11" data-x = "1" data-y = "3"></th>
+            <th id="12" data-x = "1" data-y = "4"></th>
+            <th id="13" data-x = "1" data-y = "5"></th>
+            <th id="14" data-x = "1" data-y = "6"></th>
+            <th id="15" data-x = "1" data-y = "7"></th>
         </tr>
         <tr>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
+            <th id="16" data-x = "2" data-y = "0"></th>
+            <th id="17" data-x = "2" data-y = "1"></th>
+            <th id="18" data-x = "2" data-y = "2"></th>
+            <th id="19" data-x = "2" data-y = "3"></th>
+            <th id="20" data-x = "2" data-y = "4"></th>
+            <th id="21" data-x = "2" data-y = "5"></th>
+            <th id="22" data-x = "2" data-y = "6"></th>
+            <th id="23" data-x = "2" data-y = "7"></th>
         </tr>
         <tr>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
+            <th id="24" data-x = "3" data-y = "0"></th>
+            <th id="25" data-x = "3" data-y = "1"></th>
+            <th id="26" data-x = "3" data-y = "2"></th>
+            <th id="27" data-x = "3" data-y = "3"></th>
+            <th id="28" data-x = "3" data-y = "4"></th>
+            <th id="29" data-x = "3" data-y = "5"></th>
+            <th id="30" data-x = "3" data-y = "6"></th>
+            <th id="31" data-x = "3" data-y = "7"></th>
         </tr>
         <tr>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
+            <th id="32" data-x = "4" data-y = "0"></th>
+            <th id="33" data-x = "4" data-y = "1"></th>
+            <th id="34" data-x = "4" data-y = "2"></th>
+            <th id="35" data-x = "4" data-y = "3"></th>
+            <th id="36" data-x = "4" data-y = "4"></th>
+            <th id="37" data-x = "4" data-y = "5"></th>
+            <th id="38" data-x = "4" data-y = "6"></th>
+            <th id="39" data-x = "4" data-y = "7"></th>
         </tr>
         <tr>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
+            <th id="40" data-x = "5" data-y = "0"></th>
+            <th id="41" data-x = "5" data-y = "1"></th>
+            <th id="42" data-x = "5" data-y = "2"></th>
+            <th id="43" data-x = "5" data-y = "3"></th>
+            <th id="44" data-x = "5" data-y = "4"></th>
+            <th id="45" data-x = "5" data-y = "5"></th>
+            <th id="46" data-x = "5" data-y = "6"></th>
+            <th id="47" data-x = "5" data-y = "7"></th>
         </tr>
         <tr>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
+            <th id="48" data-x = "6" data-y = "0"></th>
+            <th id="49" data-x = "6" data-y = "1"></th>
+            <th id="50" data-x = "6" data-y = "2"></th>
+            <th id="51" data-x = "6" data-y = "3"></th>
+            <th id="52" data-x = "6" data-y = "4"></th>
+            <th id="53" data-x = "6" data-y = "5"></th>
+            <th id="54" data-x = "6" data-y = "6"></th>
+            <th id="55" data-x = "6" data-y = "7"></th>
         </tr>
         <tr>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
+            <th id="56" data-x = "7" data-y = "0"></th>
+            <th id="57" data-x = "7" data-y = "1"></th>
+            <th id="58" data-x = "7" data-y = "2"></th>
+            <th id="59" data-x = "7" data-y = "3"></th>
+            <th id="60" data-x = "7" data-y = "4"></th>
+            <th id="61" data-x = "7" data-y = "5"></th>
+            <th id="62" data-x = "7" data-y = "6"></th>
+            <th id="63" data-x = "7" data-y = "7"></th>
         </tr>
     </table>
     <div id="points">
